--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,20 @@
     android:layout_margin="25dp">
 
     <EditText
+        android:id="@+id/etUsNm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="UserName"/>
 
     <EditText
+        android:id="@+id/etPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="PassWord"
         android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/btLgn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"/>
@@ -44,13 +47,10 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/txSt"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="Some Text"
-        android:layout_gravity="center"
-
-        />
-
-
+        android:layout_gravity="center" />
 
 </LinearLayout>
