--- a/gst_calculator/src/main/res/layout/activity_gst_calculator.xml
+++ b/gst_calculator/src/main/res/layout/activity_gst_calculator.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="GST Calculator"
         android:textSize="20dp" />
 
@@ -21,7 +22,7 @@
         android:id="@+id/text_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="Total Amount"
         android:textSize="25dp" />
@@ -39,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_total"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="GST Percentage"
         android:textSize="25dp" />
