--- a/notification/src/main/res/values/styles.xml
+++ b/notification/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="action_button">
+        <item name="android:textColor">@color/colorTextPrimary</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
